--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "1.0.1",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "dev": "node --watch-path=./src index.js"
   },
   "dependencies": {
