--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@veryfi/veryfi-sdk": "^1.2.4",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-server": "^14.1.1",
